[gd_scene load_steps=5 format=3 uid="uid://dadxqjntqwyts"]

[ext_resource type="Script" path="res://scenes/ui/scripts/volume_sliders.gd" id="1_dswek"]
[ext_resource type="FontFile" uid="uid://cyw4rphwc8a7k" path="res://scenes/ui/assets/fonts/Pixeled.ttf" id="1_gykmy"]

[sub_resource type="LabelSettings" id="LabelSettings_jgvaa"]
resource_local_to_scene = true
line_spacing = 0.0
font = ExtResource("1_gykmy")
font_size = 10
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.760784)

[sub_resource type="LabelSettings" id="LabelSettings_mlugq"]
resource_local_to_scene = true
line_spacing = 0.0
font = ExtResource("1_gykmy")
font_size = 10
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.760784)

[node name="VolumeSliders" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_dswek")

[node name="Master" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Master"]
layout_mode = 2
text = "Master"
label_settings = SubResource("LabelSettings_jgvaa")

[node name="MarginContainer" type="MarginContainer" parent="Master"]
custom_minimum_size = Vector2(100, 16)
layout_mode = 2

[node name="HSlider" type="HSlider" parent="Master/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.1
value = 1.0

[node name="Music" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Music"]
layout_mode = 2
text = "Music"
label_settings = SubResource("LabelSettings_jgvaa")

[node name="MarginContainer" type="MarginContainer" parent="Music"]
custom_minimum_size = Vector2(100, 16)
layout_mode = 2

[node name="HSlider" type="HSlider" parent="Music/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.1
value = 1.0

[node name="SFX" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="SFX"]
layout_mode = 2
text = "SFX
"
label_settings = SubResource("LabelSettings_mlugq")

[node name="MarginContainer" type="MarginContainer" parent="SFX"]
custom_minimum_size = Vector2(100, 16)
layout_mode = 2

[node name="HSlider" type="HSlider" parent="SFX/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.1
value = 1.0
ticks_on_borders = true

[connection signal="value_changed" from="Master/MarginContainer/HSlider" to="." method="on_master_volume_changed"]
[connection signal="value_changed" from="Music/MarginContainer/HSlider" to="." method="on_music_volume_changed"]
[connection signal="value_changed" from="SFX/MarginContainer/HSlider" to="." method="on_sfx_volume_changed"]
